[gd_scene load_steps=8 format=2]

[ext_resource path="res://tests/area overlap test.gd" type="Script" id=1]
[ext_resource path="res://scenes/ShapeSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/MarbleSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/KillArea frame.tscn" type="PackedScene" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Environment" id=3]
background_mode = 4
background_energy = 3.8
glow_enabled = true
glow_strength = 1.2
glow_blend_mode = 1
glow_hdr_threshold = 0.9
glow_hdr_scale = 1.36
glow_bicubic_upscale = true

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( -123.472, -68.0358 )
scale = Vector2( 1.08121, 1192.89 )
texture = SubResource( 2 )
centered = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="area" type="Area2D" parent="." groups=[
"Decay areas",
]]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area"]
polygon = PoolVector2Array( 284.622, 280.755, 382.166, 573.387, 848.023, 371.572, 886.704, 77.2579, 494.846, 82.3033, 335.076, 253.846 )

[node name="body" type="StaticBody2D" parent="."]
visible = false
position = Vector2( -366.631, -142.952 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="body"]
polygon = PoolVector2Array( 456.165, 255.528, 484.755, 369.89, 605.844, 297.573 )

[node name="label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fxshape" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="fxshape"]
polygon = PoolVector2Array( 392.655, 291.567, 439.746, 476.564, 878.693, 552.245, 957.737, 321.84, 947.647, 170.478, 542.335, 207.478, 409.473, 298.294 )

[node name="Polygon2D" type="Polygon2D" parent="fxshape"]
polygon = PoolVector2Array( 392.655, 291.567, 439.746, 476.564, 878.693, 552.245, 957.737, 321.84, 947.647, 170.478, 542.335, 207.478, 409.473, 298.294 )
__meta__ = {
"_editor_description_": ""
}

[node name="ShapeSpawner" parent="." instance=ExtResource( 2 )]

[node name="MarbleSpawner" parent="." instance=ExtResource( 3 )]
position = Vector2( 583.582, 67.7266 )
fixed_timer = 2.0
synchronisation = 1

[node name="kill frame" parent="." instance=ExtResource( 4 )]
[connection signal="body_entered" from="fxshape" to="." method="_on_fxshape_body_entered"]
[connection signal="body_exited" from="fxshape" to="." method="_on_fxshape_body_exited"]
[connection signal="shape_created" from="ShapeSpawner" to="." method="_on_ShapeSpawner_shape_created"]
